# sci-tools

./: .gitignore  README.md  environment.yml  kallistomulti.py  makefakeindex.py  pyproject.toml  run.py
.github/workflows/: build-release.yml
barcodes/: finalLig.tsv  finalP5.tsv  finalP7.tsv  finalP7adt.tsv  finalRT.tsv
fixmess/: Plate Specs (3).xlsx  README.md  fix.xlsx  fix_mess_else.py  fix_mess_lig.py  sciv3-P5.csv  sciv3-P7.csv  sciv3-P7adt.csv  sciv3-RT.csv  sciv3-lig.csv  v2PlateSpecToFix.csv  z_combine_excel.py
preprocess/: kallistomulti.py  makefakeindex.py  run.py
scitools/: bases.py  constants.py  idt.py  refactor.py  sci.py  utils.py
scitools/construct/: generator.py  sci.py
scitools/tricycle/: plot.py  simulation.py  tricycle.py
scripts/: 3_genpcr.py  sim_tricycle.py
splitter/: Cargo.toml  rust-toolchain.toml
splitter/.cargo/: config.toml
splitter/benches/: benchmark.rs
splitter/src/: convert.rs  lib.rs  main.rs  remap.rs  simdstuffs.rs
splitter/src/io/: mod.rs
