[package]
edition = "2021"
name = "splitter"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.3.12", features = ["derive"]}
csv = "1.2.2"
lazy_static = "1.4.0"
needletail = "0.5.1"

[dev-dependencies]
criterion = {version = "0.5.1", features = ["html_reports"]}

[[bench]]
harness = false
name = "benchmark"

[[bin]]
name = "splitter"
path = "src/main.rs"
