[package]
edition = "2021"
name = "scitools"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.3.12", features = ["derive"]}
csv = "1.2.2"
flate2 = "1.0.28"
itertools = "0.12.1"
lazy_static = "1.4.0"
needletail = "0.5.1"
parquet = "45.0.0"
twox-hash = "1.6.3"

[dev-dependencies]
criterion = {version = "0.5.1", features = ["html_reports"]}

[profile.release]
lto = true

[[bench]]
harness = false
name = "benchmark"

[[bin]]
name = "splitter"
path = "src/main.rs"

[[bin]]
name = "converter"
path = "src/convert.rs"

[[bin]]
name = "remap"
path = "src/remap.rs"
